[project]
name = "chatterbox-tts"
version = "0.1.4"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
"numpy>=1.24.0",
"librosa>=0.10.0",
"s3tokenizer",
"torch>=2.9.1+cu130",
"torchaudio>=2.9.1+cu130",
"transformers==4.46.3",
"diffusers>=0.24.0",
"resemble-perth>=1.0.1",
"conformer>=0.3.2",
"safetensors>=0.4.0",
"spacy-pkuseg",
"pykakasi>=2.3.0",
"gradio==4.19.1", # Use a compatible gradio version
"typer>=0.9.0,<0.10.0", # Force compatible typer version
"russian-text-stresser @ git+https://github.com/Vuizur/add-stress-to-epub",
"soundfile" # repleace torchaudio
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
